--- a/Dockerfile.webhook-server
+++ b/Dockerfile.webhook-server
@@ -1,11 +1,11 @@
-FROM alpine:3.4
+FROM alpine:latest
 MAINTAINER admin@aquasec.com
 RUN apk update && apk add wget ca-certificates
 
 EXPOSE 8082
 EXPOSE 8445
 
-RUN mkdir -p /opt/scalock
+RUN mkdir -p /opt/aquasec
 COPY bin/webhooksrv /opt/scalock/
-WORKDIR /opt/scalock/
-CMD ["/opt/scalock/webhooksrv"]
+WORKDIR /opt/aquasec/
+CMD ["/opt/aquasec/webhooksrv"]
