--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,12 +1,15 @@
-  - name: jira
-    enable: true
-    url: https://xxx.atlassian.net
-    user: alice
-    password: xxxxxxxxxxx
-    board: CVE
-    assignee: bob
-    ticket: Bug
-    description:
-    summary:
-
-
+---
+- name: jira
+  enable: true
+  url: <Mandatory: johndoe.atlassian.net>
+  user: <Mandatory: johndoe@gmail.com>
+  password: <Mandatory: Jira API Key>
+  tls_verify: <bool>
+  project_id: <Mandatory: Desired Jira Project ID>
+  project_name: <Mandatory: Jira Project name>
+  board: <Mandatory: Desired Jira Board name>
+  description: <
+  summary:
+  issuetype:
+  priority: 
+  assignee: <Jira assignee uid>
