--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,15 +1,13 @@
 ---
 - name: jira
   enable: true
-  url: <Mandatory: johndoe.atlassian.net>
-  user: <Mandatory: johndoe@gmail.com>
-  password: <Mandatory: Jira API Key>
-  tls_verify: <bool>
-  project_id: <Mandatory: Desired Jira Project ID>
-  project_name: <Mandatory: Jira Project name>
-  board: <Mandatory: Desired Jira Board name>
-  description: <
-  summary:
-  issuetype:
-  priority: 
-  assignee: <Jira assignee uid>
+  url: http://localhost:2990/jira # "<Mandatory: johndoe.atlassian.net>" e.g. http://localhost:2990/jira
+  user: admin # "<Mandatory: johndoe@gmail.com>"
+  password: admin #"<Mandatory: Jira API Key>"
+  tls_verify: false
+  project_key: CVE #"<Mandatory: Desired Jira Project Key>"
+  board: CVEDCC # Desired Jira Board name. Default: First board of the project
+  labels: 
+  issuetype: #default Task
+  priority: # default: High
+  assignee: # default: user
