--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,15 +1,15 @@
 ---
 - name: jira
   enable: true
-  url: "<Mandatory: johndoe.atlassian.net>"
-  user: "<Mandatory: johndoe@gmail.com>"
-  password: "<Mandatory: Jira API Key>"
-  tls_verify: false
-  project_id: "<Mandatory: Desired Jira Project ID>"
-  project_name: "<Mandatory: Jira Project name>"
-  board: "<Mandatory: Desired Jira Board name>"
-  description: "<issue description>"
+  url: <Mandatory: johndoe.atlassian.net>
+  user: <Mandatory: johndoe@gmail.com>
+  password: <Mandatory: Jira API Key>
+  tls_verify: <bool>
+  project_id: <Mandatory: Desired Jira Project ID>
+  project_name: <Mandatory: Jira Project name>
+  board: <Mandatory: Desired Jira Board name>
+  description: <
   summary:
   issuetype:
   priority: 
-  assignee: "<Jira assignee uid>"
+  assignee: <Jira assignee uid>
