--- a/cfg.yaml
+++ b/cfg.yaml
@@ -5,11 +5,9 @@
   user: "<Mandatory: johndoe@gmail.com>"
   password: "<Mandatory: Jira API Key>"
   tls_verify: false
-  project_id: "<Mandatory: Desired Jira Project ID>"
-  project_name: "<Mandatory: Jira Project name>"
-  board: "<Mandatory: Desired Jira Board name>"
-  description: "<Optional: issue description>"
-  summary:
-  issuetype:
-  priority: 
-  assignee: "<Jira assignee uid>"
+  project_key: "<Mandatory: Desired Jira Project Key>"
+  board: # Optional: desired Jira Board name. Default: default project board
+  labels: ["label1", "label2"]
+  issuetype: # default: Task
+  priority:  # default: High
+  assignee:  # default: Same user as the 'user' parameter
