--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
   - sudo apt-get install -y rpm
 
 script:
+  - pwd
   - export GOPATH=$GOPATH:`pwd`
+  - env
   - make test
   
 
