--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ before_install:
   - sudo apt-get install -y rpm
 
 script:
-  - pwd
   - export GOPATH=$GOPATH:`pwd`
-  - env
+  - make build
   - make test
   
 
