--- a/cfg.yaml
+++ b/cfg.yaml
@@ -71,7 +71,7 @@
   user: #Mandatory. E.g :johndoe@gmail.com"
   password: #Mandatory. Specify user API key
   instance: #Mandatory. Name of ServiceN  ow Instance
-  board: #Mandatory. Specify the ServiceNow board name to open tickets on
+  board: # Specify the ServiceNow board name to open tickets on. Default is "incident"
 
   Policy-Min-Vulnerability: high # (what is the minimum vulnerability severity that triggers a ticket)
   Policy-Registry: [alpine, Docker image] #Optional. Comma separated list of registries that will trigger opening a ticket
