[issue-31] Add information about AquaServer field, handling and test for it

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,5 +1,5 @@
 ---
-- AquaServer: # url of Aqua Server for links
+- AquaServer: # url of Aqua Server for links. E.g. https://demolab.aquasec.com
 
 - name: my-jira # name must be unique
   type: jira # supported types: jira, email
