[issue-45] Add a base for Max_DB_Size and Delete_Old_Data settings

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,5 +1,8 @@
 ---
-- AquaServer: # url of Aqua Server for links. E.g. https://myserver.aquasec.com
+- type: common # Common settings for all plugins
+  AquaServer: # url of Aqua Server for links. E.g. https://myserver.aquasec.com
+  Max_DB_Size: 1000 # Max size of DB. MB. if empty then unlimited
+  Delete_Old_Data: 10 # delete data older than N day(s).  If empty then we do not delete.
 
 - name: my-jira # name must be unique
   type: jira # supported types: jira, email
