--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,32 +1,36 @@
+---
 name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [master, main]
   pull_request:
-    branches: [ master ]
+    branches: [master, main]
 
 jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.13
-      id: go
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.13
+        id: go
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-    - name: Build
-      run: make all
+      - name: yaml-lint
+        uses: ibiqlik/action-yamllint@v3
 
-    - name: Test
-      run: make test
-    
-    - name: Publish Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      - name: Build
+        run: make all
+
+      - name: Test
+        run: make test
+
+      - name: Publish Codecov
+        run: bash <(curl -s https://codecov.io/bash)
