--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run unit tests
-        run: make tests
+        run: make test
       - name: Upload code coverage
         uses: codecov/codecov-action@v1
         with:
