chore - github action publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,10 @@
 name: Publish
 on:
   push:
+    branches: [main]
     tags:
       - "v*"
+  workflow_dispatch:
 env:
   ALIAS: aquasecurity
   REP: alm-integration
