--- a/cfg.yaml
+++ b/cfg.yaml
@@ -97,6 +97,12 @@
   enable: true
   url: https://..../webhook/   #  Webhook's url
 
+- name: splunk
+  type: splunk
+  enable: true
+  url: http://localhost:8088 # Mandatory. Url of a Splunk server
+  token: <token> # Mandatory. a HTTP Event Collector Token
+
 - name: my-servicenow
   type: serviceNow
   enable: true
