--- a/cfg.yaml
+++ b/cfg.yaml
@@ -102,6 +102,7 @@
   enable: true
   url: http://localhost:8088 # Mandatory. Url of a Splunk server
   token: <token> # Mandatory. a HTTP Event Collector Token
+  SizeLimit: 10000 # Optional. Maximum scan length, in bytes. Default: 10000
 
 - name: my-servicenow
   type: serviceNow
