--- a/kubernetes/pvc.yaml
+++ b/kubernetes/pvc.yaml
@@ -2,8 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
-  name: aqua-webhook-pvc
+  name: postee-pvc
   namespace: aqua
 spec:
   accessModes:
