--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,5 +37,20 @@ jobs:
       - name: Test
         run: make test
 
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL'
+
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: 'trivy-results.sarif'
+          
       - name: Publish Codecov
         run: bash <(curl -s https://codecov.io/bash)
