--- a/deploy/helm/postee/templates/pvc.yaml
+++ b/deploy/helm/postee/templates/pvc.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.persistentVolume.enabled (not .Values.persistentVolume.existingClaim) }}
 {{- $fullName := include "postee.fullname" . -}}
 kind: PersistentVolumeClaim
 apiVersion: v1
@@ -7,9 +8,10 @@ metadata:
   name: {{ include "postee.fullname" . }}-pvc
 spec:
   accessModes:
-  {{- range .Values.persistence.accessModes }}
+  {{- range .Values.persistentVolume.accessModes }}
     - {{ . | quote }}
   {{- end }}
   resources:
     requests:
-      storage: {{ .Values.persistence.size | quote }}
+      storage: {{ .Values.persistentVolume.size | quote }}
+{{- end }}
