--- a/deploy/helm/postee/templates/configmap.yaml
+++ b/deploy/helm/postee/templates/configmap.yaml
@@ -1,8 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "postee.fullname" . }}-cm
+  name: {{ include "postee.fullname" . }}-cfg
 data:
-  cfg.yaml: |
-{{ range .Files.Lines .Values.applicationConfigPath }}
-    {{ . }}{{ end }}
+{{ (tpl (.Files.Glob .Values.posteeConfigPath).AsConfig . ) | indent 2 }}
