--- a/deploy/helm/postee/templates/deployment.yaml
+++ b/deploy/helm/postee/templates/deployment.yaml
@@ -28,6 +28,16 @@ spec:
       serviceAccountName: {{ include "postee.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      initContainers:
+        - name: init-postee
+          image: "{{ .Values.imageInit.repository }}:{{ .Values.imageInit.tag }}"
+          imagePullPolicy: {{ .Values.imageInit.pullPolicy }}
+          command: ["/bin/chown", "-R", "1099", "{{ .Values.persistentVolume.mountPath }}"]
+          volumeMounts:
+            - name: {{ $fullName }}-db
+              mountPath: {{ .Values.persistentVolume.mountPath }}
+          securityContext:
+            runAsUser: 0
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -42,20 +52,20 @@ spec:
               containerPort: {{ .Values.service.targetPortSsl }}
               protocol: TCP
           volumeMounts:
-            - name: {{ $fullName }}-cm
+            - name: {{ $fullName }}-cfg
               mountPath: /policy/cfg.yaml
-            - name: {{ $fullName }}-pvc
-              mountPath: /server/database
+            - name: {{ $fullName }}-db
+              mountPath: {{ .Values.persistentVolume.mountPath }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - configMap:
-            name: {{ $fullName }}-cm
+            name: {{ $fullName }}-cfg
             items:
               - key: cfg.yaml
                 path: conf
-          name: {{ $fullName }}-cm
-        - name: {{ $fullName }}-pvc
+          name: {{ $fullName }}-cfg
+        - name: {{ $fullName }}-db
         {{- if .Values.persistentVolume.enabled }}
           persistentVolumeClaim:
             claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ $fullName }}-pvc {{- end }}
