--- a/deploy/helm/postee/templates/deployment.yaml
+++ b/deploy/helm/postee/templates/deployment.yaml
@@ -59,6 +59,8 @@ spec:
           volumeMounts:
             - name: {{ $fullName }}-cfg
               mountPath: /policy
+            - name: {{ $fullName }}-rego
+              mountPath: /rego
             - name: {{ $fullName }}-db
               mountPath: {{ .Values.persistentVolume.mountPath }}
           resources:
@@ -67,6 +69,9 @@ spec:
         - configMap:
             name: {{ $fullName }}-cfg
           name: {{ $fullName }}-cfg
+        - configMap:
+            name: {{ $fullName }}-rego
+          name: {{ $fullName }}-rego
         - name: {{ $fullName }}-db
         {{- if .Values.persistentVolume.enabled }}
           persistentVolumeClaim:
