--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -3,7 +3,8 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-posteeConfigPath: "files/*"
+posteeConfigPath: "cfg-files/*"
+posteeRegoPath: "rego-files/*"
 image:
   repository: aquasec/postee
   pullPolicy: IfNotPresent
