--- a/cfg.yaml
+++ b/cfg.yaml
@@ -1,10 +1,16 @@
----
-- type: common   #  Common settings for all plugins
-  AquaServer:   #  url of Aqua Server for links. E.g. https://myserver.aquasec.com
-  Max_DB_Size: 1000   #  Max size of DB. MB. if empty then unlimited
-  Delete_Old_Data: 10   #  delete data older than N day(s).  If empty then we do not delete.
-  DbVerifyInterval: 1   #  hours. an Interval between tests of DB. Default: 1 hour
+Name: tenant          #  the tenant name
+AquaServer:           #  url of Aqua Server for links. E.g. https://myserver.aquasec.com
+Max_DB_Size: 1000     #  Max size of DB. MB. if empty then unlimited
+Delete_Old_Data: 10   #  delete data older than N day(s).  If empty then we do not delete.
+DbVerifyInterval: 1   #  hours. an Interval between tests of DB. Default: 1 hour
 
+Rules:
+  - name: rule1       #  name must be unique
+    type: scan        #  supported types: scan, audit
+    Policy-OPA: []    #  a list of files with OPA/REGO policies.
+    integrations: []  #  a list of integrations which will receive a scan or an audit event
+
+Integrations:
 - name: my-jira   #  name must be unique
   type: jira   #  supported types: jira, email
   enable: true
@@ -18,13 +24,6 @@
   issuetype:  # Optional. Specifty the issue type to open (Bug, Task, etc.). Default is "Task"
   priority:   # Optional. Specify the issues severity. Default is "High"
   assignee:   # Optional. Specify the assigned user. Default is the user that opened the ticket
-  Policy-Min-Vulnerability:  # Optional. The minimum vulnerability severity that triggers a ticket
-  Policy-Registry:  # Optional. Comma separated list of registries that will trigger opening a ticket, for example: ["Docker Hub"]
-  Policy-Image-Name:  # Optional. Comma separated list of images that will trigger opening a ticket, for example: ["alpine"]
-  Policy-Non-Compliant:  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false). Default is false
-  Policy-Show-All:  # Optonal. Open a ticket even if a ticket was opened for same image with same amount of vulnerabilities. Default is false.
-  Ignore-Registry:  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name:  # Optional. You can specify array of image names to ignore.
   Aggregate-Issues-Number:   #  a number of scans to aggregate into one ticket
   Aggregate-Issues-Timeout:    #  number of seconds, minutes, hours to aggregate, maximum is 24 hours Xs or Xm or Xh)
 
@@ -37,13 +36,6 @@
   port:  # Mandatory: SMTP server port (e.g. 587)
   sender:  # Mandatory: The email address to use as a sender
   recipients: ["", ""]  # Mandatory: comma separated list of recipients
-  Policy-Min-Vulnerability: high   #  (what is the minimum vulnerability severity that triggers a ticket)
-  Policy-Registry: [alpine, Docker image]  # Optional. Comma separated list of registries that will trigger opening a ticket
-  Policy-Image-Name: [alpine, alpine2]  # Optional. Comma separated list of images that will trigger opening a ticket
-  Policy-Non-Compliant: true  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false)
-  Ignore-Registry: []  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name: []  # Optional. You can specify array of image names to ignore.
-  Policy-Only-Fix-Available:  # Optional. Open ticket only if vulnerability has a fix (true or false)
 
 - name: my-email-smtp-server
   type: email
@@ -51,13 +43,6 @@
   UseMX: true
   sender:  # Mandatory: The email address to use as a sender
   recipients: ["", ""]  # Mandatory: comma separated list of recipients
-  Policy-Min-Vulnerability: high   #  (what is the minimum vulnerability severity that triggers a ticket)
-  Policy-Registry: [alpine, Docker image]  # Optional. Comma separated list of registries that will trigger opening a ticket
-  Policy-Image-Name: [alpine, alpine2]  # Optional. Comma separated list of images that will trigger opening a ticket
-  Policy-Non-Compliant: true  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false)
-  Ignore-Registry: []  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name: []  # Optional. You can specify array of image names to ignore.
-  Policy-Only-Fix-Available:  # Optional. Open ticket only if vulnerability has a fix (true or false)
 
 - name: my-other-email  # this is an example for multiple integrations of same type
   type: email
@@ -68,24 +53,11 @@
   port:  # Mandatory: SMTP server port (e.g. 587)
   sender:  # Mandatory: The email address to use as a sender
   recipients: ["", ""]  # Mandatory: comma separated list of recipients
-  Policy-Min-Vulnerability: high   #  (what is the minimum vulnerability severity that triggers a ticket)
-  Policy-Registry: []  # Optional. Comma separated list of registries that will trigger opening a ticket, e.g. [Docker Hub]
-  Policy-Image-Name: []  # Optional. Comma separated list of images that will trigger opening a ticket, e.g. [alpine]
-  Policy-Non-Compliant:  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false)
-  Ignore-Registry: []  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name: []  # Optional. You can specify array of image names to ignore.
 
 - name: my-slack
   type: slack
   enable: true
   url: https://hooks.slack.com/services/TAAAA/BBB/<key>
-
-  Policy-Min-Vulnerability:  # Optional (what is the minimum vulnerability severity that triggers a ticket)
-  Policy-Registry:  # Optional. Comma separated list of registries that will trigger opening a ticket
-  Policy-Image-Name:  # Optional. Comma separated list of images that will trigger opening a ticket
-  Policy-Non-Compliant: true  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false)
-  Ignore-Registry:  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name:  # Optional. You can specify array of image names to ignore.
 
 - name: ms-team
   type: teams
@@ -112,10 +84,3 @@
   password:  # Mandatory. Specify user API key
   instance:  # Mandatory. Name of ServiceN  ow Instance
   board:   #  Specify the ServiceNow board name to open tickets on. Default is "incident"
-
-  Policy-Min-Vulnerability:  # (what is the minimum vulnerability severity that triggers a ticket)
-  Policy-Registry:  # Optional. Comma separated list of registries that will trigger opening a ticket
-  Policy-Image-Name:  # Optional. Comma separated list of images that will trigger opening a ticket
-  Policy-Non-Compliant:  # Optional. Open a ticket only if image is non-compliant (true) or in any case (false)
-  Ignore-Registry: []  # Optional. You can specify array of registry names to ignore.
-  Ignore-Image-Name: []  # Optional. You can specify array of image names to ignore.
