--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -12,7 +12,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "bootstrap-vue": "^2.21.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
