--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -13,7 +13,8 @@
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "axios": "^0.21.1",
-    "bootstrap-vue": "^2.21.2"
+    "bootstrap-vue": "^2.21.2",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
