--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -14,7 +14,9 @@
     "vuex": "^3.6.2",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "vue-codemirror": "^4.0.6",
+    "codemirror-rego": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
