--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -77,6 +77,13 @@ spec:
               mountPath: /rego
             - name: postee-db
               mountPath: /server/database
+          resources:
+            limits:
+              cpu: 500m
+              memory: 256Mi
+            requests:
+              cpu: 200m
+              memory: 128Mi
       volumes:
         - configMap:
             name: postee-config
