--- a/cfg.yaml
+++ b/cfg.yaml
@@ -105,7 +105,7 @@ templates:
     item.failed
     }
 
-    template = res {
+    result = res {
       severities := ["critical", "high", "medium", "low", "negligible"]
 
       severity_stats:= [gr |
