--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,9 +3,8 @@ release:
   draft: false
   prerelease: auto
 env:
-  - GO111MODULE=off
+  - GO111MODULE=on
   - CGO_ENABLED=0
-  - GOPATH=/home/runner/work/postee/postee/
 before:
   hooks:
     - make all
